<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbarStyle="insideInset"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
    >
<!-- TextView -->
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:orientation="horizontal"
            android:background="@android:drawable/bottom_bar"
            android:padding="0dip"
            android:gravity="center_vertical"
            android:baselineAligned="false"
        >
           <AutoCompleteTextView android:id="@+id/edit_activity_place_name"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dip"
                android:layout_marginLeft="4dip"
                android:gravity="center_vertical"              
                android:hint="@string/ghostData_name"/>
       </LinearLayout>
<!-- Separator -->        
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider"
    />
    <TextView 
        android:text="Address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/dark_header_dithered"
        android:textColor="?android:attr/textColorSecondary"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingLeft="8dip"
    />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider"
    />
</LinearLayout>
<!-- Address -->
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_marginTop="2dip"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
    >

        <TextView 
            android:layout_width="102dip"
            android:layout_height="fill_parent"
            android:paddingLeft="4dip"
            android:gravity="left|center_vertical"
            android:text="Address" 
            android:textAppearance="?android:attr/textAppearanceMedium"
        />
        <EditText android:id="@+id/edit_activity_address"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
        android:layout_marginRight="4dip"/>   
</LinearLayout>
<!-- Separator -->        
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider"
    />
    <TextView 
        android:text="Activity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/dark_header_dithered"
        android:textColor="?android:attr/textColorSecondary"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingLeft="8dip"
    />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider"
    />
</LinearLayout>
<!-- Activity Type -->
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_marginTop="2dip"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
    >

        <TextView 
            android:layout_width="102dip"
            android:layout_height="fill_parent"
            android:paddingLeft="4dip"
            android:gravity="left|center_vertical"
            android:text="Type" 
            android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <Spinner android:id="@+id/edit_activiy_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/activity_prompt"
    android:layout_marginRight="4dip"/>
        
    </LinearLayout>
<!-- Simple Separator -->    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider"
    />    
<!-- Number of players -->
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_marginTop="2dip"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
    >

        <TextView 
            android:layout_width="102dip"
            android:layout_height="fill_parent"
            android:paddingLeft="4dip"
            android:gravity="left|center_vertical"
            android:text="Players" 
            android:textAppearance="?android:attr/textAppearanceMedium"
        />
            <Spinner android:id="@+id/edit_activity_number_players"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:layout_marginRight="4dip" android:prompt="@string/users_prompt"/>
    <!-- 
        <EditText android:id="@+id/edit_activity_number_players"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
        android:layout_marginRight="4dip"/>   
    -->
</LinearLayout>    
 <!-- Separator -->        
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider"
    />
    <TextView 
        android:text="When"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/dark_header_dithered"
        android:textColor="?android:attr/textColorSecondary"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingLeft="8dip"
    />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider"
    />
</LinearLayout>
<!-- Date -->
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_marginTop="2dip"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
    >

        <TextView 
            android:layout_width="102dip"
            android:layout_height="fill_parent"
            android:paddingLeft="4dip"
            android:gravity="left|center_vertical"
            android:text="Date" 
            android:textAppearance="?android:attr/textAppearanceMedium"
        />
        <Button android:id="@+id/edit_activity_date"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" android:layout_marginRight="4dip"/>   
</LinearLayout>
<!-- Simple Separator -->    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider"
    />
<!-- Time -->
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_marginTop="2dip"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
    >

        <TextView 
            android:layout_width="102dip"
            android:layout_height="fill_parent"
            android:paddingLeft="4dip"
            android:gravity="left|center_vertical"
            android:text="Time" 
            android:textAppearance="?android:attr/textAppearanceMedium"
        />
        <Button android:id="@+id/edit_activity_time"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" android:layout_marginRight="4dip"/>  
</LinearLayout>


<!-- Bottom bar -->
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider"
            />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:layout_marginTop="1dip"
            android:background="@android:drawable/bottom_bar"
        >
            <Button android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/button_save"
                android:minWidth="120dip"
                android:minHeight="48dip"
            />

            <Button android:id="@+id/discardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/button_discard"
                android:minWidth="120dip"
                android:minHeight="48dip"
            />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
